--- a/PRJ01 Conecta/Global Archives/Paginas Primarias/UC4.17 - Fazer Cadastro Cliente/cad-Cliente.html
+++ b/PRJ01 Conecta/Global Archives/Paginas Primarias/UC4.17 - Fazer Cadastro Cliente/cad-Cliente.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/cad-Cliente.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <link rel="icon" href="../selec-TipoCadastro/img - Fazer Cadastros/icon-conecta.svg" type="image/x-icon">
 
     <title>Conecta+ | Cadastre-se como cliente aqui!</title>
 </head>
