Histórico de Agendamentos

--- a/PRJ01 Conecta/Global Archives/Paginas Primarias/UC4.16 - Login/login.html
+++ b/PRJ01 Conecta/Global Archives/Paginas Primarias/UC4.16 - Login/login.html
@@ -53,7 +53,7 @@
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Não Possui uma conta? <a href="../UC4.7 e UC4.8 - Fazer Cadastros/cad-Usuarios.html" class="ml-2">Cadastre-se</a>
+						Não Possui uma conta? <a href="../selec-TipoCadastro/sel-TipoCad.html" class="ml-2">Cadastre-se</a>
 					</div>
 					<div class="d-flex justify-content-center links">
 						<a href="../UC4.15 - Recuperar Senha/rec-Senha.html">Esqueceu sua senha?</a>
