ALTERAÇÃO NO CODIGO

--- a/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.html
+++ b/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.html
@@ -22,11 +22,11 @@
                     <button class="denuncia-detalhes-btn" onclick="verDetalhes(this)">Ver Detalhes</button>
                 </div>
             </li>
-            <!-- Adicione mais denúncias conforme necessário -->
+            <!--Mais denuncias-->
         </ul>
     </div>
 
-    <!-- Pop-up para exibir detalhes e ações da denúncia -->
+    
     <div id="popup" class="popup">
         <div class="popup-content">
             <h3>Resumo da Denúncia</h3>
