--- a/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.html
+++ b/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.html
@@ -61,7 +61,7 @@
             <li class="denuncia-item">
                 <div class="denuncia-header">
                     <h2 class="denuncia-titulo">Título da Denúncia 1</h2>
-                    <span class="denuncia-status">Pendente</span>
+                    <span class="denuncia-status" id="denuncia-status-1">Pendente</span>
                 </div>
                 <p class="denuncia-descricao">Descrição breve da denúncia que foi registrada. Mais detalhes sobre o caso e situação.</p>
                 <div class="denuncia-footer">
