BUGFIX - Correção Front Listar Denuncias

--- a/PRJ05 Trash Track/TrashTrack-app/listadenuncias.html
+++ b/PRJ05 Trash Track/TrashTrack-app/listadenuncias.html
@@ -32,13 +32,8 @@
               <div class="d-flex align-items-center gap-3">
                   <ul class="navbar-nav mb-2 mb-lg-0">
                       <li class="nav-item">
-                          <img src="img/Sino.png" alt="Notification logo" width="20" height="20" class="logo" onclick="abrirNotificacao()">
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="cadastro.html">Cadastro</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="login.html"> <button class="btn btn-outline-success" type="submit">Entrar</button> </a>
+                        <!-- Não sei se seria legal colocar o nome do user ? vou comentar aq e dps falo em sala de aula com vcs -->
+                          <button class="btn btn-outline-success" type="submit">Administrador</button>
                       </li>
                   </ul>
               </div>
