Fix: Erros no HTML
Correção na sintaxe do código.

--- a/PRJ05 Trash Track/TrashTrack/web/listadenuncias.html
+++ b/PRJ05 Trash Track/TrashTrack/web/listadenuncias.html
@@ -93,37 +93,37 @@
                     <td scope="row">Falso Ponto</td>
                     <td>Maria Julia Fantagussi</td>
                     <td>08/07/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"><button> Consultar Denúncia </button></a></td> 
                 </tr>
                 <tr>
                     <td scope="row">Ponto Duplicado</td>
                     <td>Bianca Emily Lourenço</td>
                     <td>21/05/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></a></td> 
                 </tr>
                 <tr>
                     <td scope="row">Falso Ponto</td>
                     <td>Alberto Kazuaki</td>
                     <td>20/05/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></a></td> 
                 </tr>
                 <tr>
                     <td scope="row">Falso Ponto</td>
                     <td>Adriana Lourenço</td>
                     <td>03/05/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></a></td> 
                 </tr>
                 <tr>
                     <td scope="row">Falso Duplicado</td>
                     <td>Karina Tais Pinto</td>
                     <td>22/02/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></a></td> 
                 </tr>
                 <tr>
                     <td scope="row">Falso Ponto</td>
                     <td>Geisa Ramos</td>
                     <td>10/01/2024</td>
-                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></td> </a>
+                    <td> <a href="modal_consultar_denuncia-admin.html" target="_self"> <button> Consultar Denúncia </button></a></td> 
                 </tr>
             </tbody>
         </table>
