--- a/PRJ05 Trash Track/TrashTrack/web/index.html
+++ b/PRJ05 Trash Track/TrashTrack/web/index.html
@@ -32,7 +32,7 @@
                           <img src="img/Sino.png" alt="Notification logo" width="20" height="20" class="logo">
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="cadastro.html">Cadastro</a>
+                          <a class="nav-link" aria-current="page" href="cadastro.jsp">Cadastro</a>
                       </li>
                       <li class="nav-item">
                           <a href="login.html"> <button class="btn btn-outline-success" type="submit">Entrar</button> </a>
