Fix: Erros no Html
Correção na sintaxe do código.

--- a/PRJ05 Trash Track/TrashTrack/web/login.html
+++ b/PRJ05 Trash Track/TrashTrack/web/login.html
@@ -64,7 +64,7 @@
                                 <br>
 
                                 <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Entrar</button>
-                                <p>Não tem uma conta ? <a href="cadastro.html"> Registre-se aqui</a></p>
+                                <p>Não tem uma conta ? <a href="cadastro.jsp"> Registre-se aqui</a></p>
                                 <a href="recuperar-senha.html">Recuperar Senha </a>
 
                         
