refactor: páginas index e cadastro jsp
páginas de cadastro, index, informativa, login, mapa e sobre agora levam para o endereço correto

--- a/PRJ05 Trash Track/TrashTrack/web/mapa.html
+++ b/PRJ05 Trash Track/TrashTrack/web/mapa.html
@@ -16,7 +16,7 @@
   <!--NavBar-->
 
   <nav class="container-fluid">
-    <a href="index.html"><img src="img/seta.svg" alt="seta" id="seta"></a>
+    <a href="index.jsp"><img src="img/seta.svg" alt="seta" id="seta"></a>
     <button type="button" class="btn-select-criar" id="btn-lista">Seleção de pontos</button>
     <button class="perfil "><img src="img/perfil.svg" alt="perfil"></button>
   </nav>
