refactor: Página cadastro
Páginas informativa e sobre levam para o cadastro corretamente

--- a/PRJ05 Trash Track/TrashTrack/web/sobre.html
+++ b/PRJ05 Trash Track/TrashTrack/web/sobre.html
@@ -47,7 +47,7 @@
   
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="cadastro.html">Cadastro</a>
+                            <a class="nav-link" aria-current="page" href="cadastro.jsp">Cadastro</a>
                         </li>
                         <li class="nav-item">
                             <a href="login.jsp"> <button class="btn btn-outline-success" type="submit">Entrar</button> </a>
