Feat: Trocar Tipo do usuario

--- a/PRJ05 Trash Track/TrashTrack/web/mapa.html
+++ b/PRJ05 Trash Track/TrashTrack/web/mapa.html
@@ -46,7 +46,7 @@
       <a href="modal_editar_info.html" target="self">Editar Informações</a>
       <br>
       <h2 id="tipo-usu">Sou Coletor</h2>
-      <label class="switch" >
+      <label class="switch" id="alterarUsuarios" onclick="alternarUsuario(event)">
         <input type="checkbox" id="toggle">
         <span class="slider"></span>
     </label>
