docs: comentário para id dos pontos em JSP

--- a/PRJ05 Trash Track/TrashTrack/web/mapa.html
+++ b/PRJ05 Trash Track/TrashTrack/web/mapa.html
@@ -63,8 +63,8 @@
     </div>
     <div id="modalBodyLista">
       <div id="lista">
-        <div class="ponto">
-          <img  src="img/pontoOrganico.png" alt="ponto">
+        <div class="ponto" data-idPonto=""> <!-- INSERIR ID RESPECTIVO DO PONTO COM JSP -->
+          <img  src="img/pontoOrganico.png" alt="ponto"> 
           <div class="ende">R. David de Carvalho, 1055 - Vila Valentin</div>
           <button class="btn-denuncia"><img id="denuncia" src="img/denuncia.png" alt="denuncia"></button>
         </div>
