fix: Modais finais

--- a/PRJ05 Trash Track/TrashTrack/web/listadenuncias.html
+++ b/PRJ05 Trash Track/TrashTrack/web/listadenuncias.html
@@ -178,7 +178,7 @@
                       <div class="modal-footer">
                           <button type="button" type="button" class="btn btn-primary btn-salvar" data-bs-toggle="modal" data-bs-target="#exampleModal2">Banir Usuário</button>
                           <button type="button" type="button" class="btn btn-primary btn-salvar" data-bs-toggle="modal" data-bs-target="#exampleModal3">Excluir Ponto de Coleta</button>
-                          <a href="modal-excluir-denuncia-admin.html" target="_self"> <button type="button" class="btn btn-primary btn-salvar-red">Deletar Denúncia</button> </a>
+                          <button type="button" type="button" class="btn btn-primary btn-salvar-red" data-bs-toggle="modal" data-bs-target="#exampleModal4">Deletar Denúncia</button>
                       </div>
                   </div>
               </div>
@@ -217,7 +217,7 @@
     <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
       </div>
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+      <div class="modal " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
           <div class="modal-dialog">
               <div class="modal-content">
   
@@ -235,7 +235,33 @@
                   
               </div>
           </div>
+    </div>
+
+    <!-- Modal Excluir denuncia -->
+
+    <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
+      <!-- Button trigger modal -->
       </div>
+      <!-- Modal -->
+      <div class="modal " id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+  
+                  <!-- header modal -->
+                  <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">Excluir Denúncia</h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+  
+                      <!-- footer modal-->
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-primary btn-salvar">Excluir</button>
+                      <button type="button" class="btn btn-primary btn-salvar-red">Cancelar</button>
+                  </div>
+                  
+              </div>
+          </div>
+    </div>
   
 
     <!-- Script dos Modais -->
