Atualização de arquivos

--- a/PRJ01 Conecta/Front-end/Paginas Primarias/UC4.15 - Recuperar Senha/rec-Senha.html
+++ b/PRJ01 Conecta/Front-end/Paginas Primarias/UC4.15 - Recuperar Senha/rec-Senha.html
@@ -39,7 +39,7 @@
 				        </form>
 				    </div>
 					<div class="d-flex justify-content-center links">
-						Não Possui uma conta? <a href="../UC4.7 e UC4.8 - Fazer Cadastros/cad-Usuarios.html" class="ml-2">Cadastre-se</a>
+						Não Possui uma conta? <a href="/Paginas Primarias/selec-TipoCadastro/sel-TipoCad.html">Cadastre-se</a>
 					</div>
 				</div>
 			</div>
