--- a/PRJ01 Conecta/Front-end/Paginas Primarias/selec-TipoCadastro/sel-TipoCad.html
+++ b/PRJ01 Conecta/Front-end/Paginas Primarias/selec-TipoCadastro/sel-TipoCad.html
@@ -16,7 +16,7 @@
             </div>
         </a>
         
-        <a href="">
+        <a href="/Paginas Primarias/UC4.18 - Fazer Cadastro Profissional/cad-Profissional.html">
             <div class="option-box profissional" id="FormularioProfissional">
                 <h2>Quero Ofertar Serviços</h2>
             </div>
