--- a/PRJ01 Conecta/Programação do Projeto/Front-end/Dash-Profissional/UC4.08-Lista de Serviços Cadastrados Profissional/lista-Servicos.html
+++ b/PRJ01 Conecta/Programação do Projeto/Front-end/Dash-Profissional/UC4.08-Lista de Serviços Cadastrados Profissional/lista-Servicos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script defer src="lista-Servicos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Menu Lateral -->
     <div id="sidebar" class="sidebar">
@@ -56,7 +58,7 @@
         </div>
 
         <!-- Lista de Serviços -->
-         <h2>Lista de Serviços Cadastrados</h2>
+        <h2>Lista de Serviços Cadastrados</h2>
         <div class="services-container">
             <button class="btn-add-service" onclick="toggleForm()">Cadastrar Serviço</button>
 
@@ -89,9 +91,12 @@
                 </div>
                 <div class="footer-center">
                     <div class="social-icons">
-                        <a href="https://www.instagram.com" target="_blank" class="social-circle"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com" target="_blank" class="social-circle"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://wa.me" target="_blank" class="social-circle"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" class="social-circle"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" class="social-circle"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://wa.me" target="_blank" class="social-circle"><i
+                                class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="footer-right">
@@ -104,4 +109,5 @@
         </footer>
     </div>
 </body>
+
 </html>
