Arquivos do Front-end e Instruções do Guia São João

--- a/PRJ02 Guia São João/Front-end/index.html
+++ b/PRJ02 Guia São João/Front-end/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/pin.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guia São João</title>
     <link
@@ -10,171 +11,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="container-fluid p-0">
-      <nav class="navbar p-3">
-        <div class="container">
-          <div>
-            <a class="d-flex align-items-center" href="#">
-              <img src="/images/pin.svg" alt="Logo" width="30" height="35" />
-              <span class="ms-3 fw-bold text-light">Guia São João</span>
-            </a>
-          </div>
-
-          <div>
-            <button
-              class="btn btn-light mx-1"
-              type="button"
-              onclick="window.location.href='cadastro.html';"
-            >
-              Cadastro
-            </button>
-            <button
-              class="btn btn-light mx-2"
-              type="button"
-              onclick="window.location.href='login.html';"
-            >
-              Login
-            </button>
-          </div>
-        </div>
-      </nav>
-    </header>
-
-    <div class="container-fluid p-0 position-relative">
-      <!-- Imagem de fundo ocupando toda a tela -->
-      <img
-        src="images/bg-pattern.svg"
-        class="img-fluid w-100"
-        alt="Imagem de fundo"
-      />
-
-      <!-- Slogan por cima da imagem -->
-      <div
-        class="position-absolute top-50 start-50 translate-middle text-center p-4 slogan-container"
-      >
-        <h1 class="slogan display-4 text-light fw-bold mb-3">
-          São João como você nunca viu.
-        </h1>
-        <h2 class="text-light fw-normal">Explore e surpreenda-se.</h2>
-      </div>
-    </div>
-
-    <div class="container-fluid py-5">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-5 text-center">
-          <img
-            src="images/map-icon.svg"
-            class="img-fluid me-5"
-            alt="Importância dos guias"
-          />
-        </div>
-        <div class="col-md-4">
-          <h3 class="fw-bold mb-4">Descubra São João com seu guia!</h3>
-          <p class="fs-5 fw-normal">
-            Este portal é a sua chave para explorar tudo o que a cidade tem a
-            oferecer. Desde eventos locais vibrantes até informações úteis sobre
-            serviços essenciais como hospitais, escolas e centros de reciclagem,
-            o Guia São João foi projetado para conectar você com a comunidade.
-            Navegue por um mapa interativo que destaca as áreas de Zona Azul e
-            fique por dentro das novidades e atividades que tornam nossa cidade
-            especial. Junte-se a nós e aproveite ao máximo o que São João da Boa
-            Vista tem a oferecer!
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <main class="container-fluid px-0 py-5 text-light">
-      <div class="container py-5">
-        <section class="mb-5">
-          <h2 class="text-center mb-4">Próximos eventos</h2>
-          <div class="row justify-content-center py-3">
-            <div class="col-md-4 mb-3">
-              <div class="card text-dark">
-                <h3 class="card-header">Festa Junina do Bairro</h3>
-                <div class="card-body">
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Data: 24/06/2024</li>
-                    <li class="list-group-item">Local: Praça Central</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card text-dark">
-                <h3 class="card-header">Arraial Beneficente</h3>
-                <div class="card-body">
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Data: 30/06/2024</li>
-                    <li class="list-group-item">Local: Igreja São João</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card text-dark">
-                <h3 class="card-header">Show de Forró</h3>
-                <div class="card-body">
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Data: 05/07/2024</li>
-                    <li class="list-group-item">Local: Parque Municipal</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="mt-5">
-          <h2 class="text-center mb-4">Feedback dos usuários</h2>
-          <div class="row justify-content-center py-3">
-            <div class="col-md-4 mb-3">
-              <div class="card h-100 text-dark">
-                <div class="card-body">
-                  <blockquote class="blockquote mb-0">
-                    <p>
-                      Ótimo site! Fácil de usar e cheio de informações úteis.
-                    </p>
-                    <footer class="blockquote-footer text-end">
-                      João Silva
-                    </footer>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card h-100 text-dark">
-                <div class="card-body">
-                  <blockquote class="blockquote mb-0">
-                    <p>
-                      Amei a seção de eventos! Consegui encontrar várias festas
-                      na minha região.
-                    </p>
-                    <footer class="blockquote-footer text-end">
-                      Maria Oliveira
-                    </footer>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card h-100 text-dark">
-                <div class="card-body">
-                  <blockquote class="blockquote mb-0">
-                    <p>Interface limpa e funcional. Parabéns pelo trabalho!</p>
-                    <footer class="blockquote-footer text-end">
-                      Pedro Souza
-                    </footer>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-    </main>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
